# AIREX-AI

./: .dockerignore  .env.example  .gitignore  .mcp.json  .opencodeignore  AGENTS.md  CLAUDE.md  LICENSE  PROJECT_STATUS.md  README.md  TECH_STACK.md  Untitled  airex-presentation.html  docker-compose.yml  package.json  plan.md  route
.agents/: README.md
.codex/: config.toml
.sisyphus/: boulder.json
backend/: .dockerignore  Dockerfile  alembic.ini  requirements.txt
config/: openclaw.env.example
database/: Dockerfile  alembic.ini
docs/: MCD.md  api_guide.md  architecture.md  backend_skill.md  database_skill.md  deploy-skill.md  deployment_guide.md  frontend_skill.md  mvp_build_phases.md  openclaw_airex_architecture.md  site24x7_api_usage.md  site24x7_integration.md
e2e/: e2e_output.txt  package-lock.json  package.json  playwright.config.js
frontend/: Dockerfile  index.html  (+4 more)
services/airex-api/: Dockerfile  pyproject.toml  requirements.txt
services/airex-api/app/: main.py
services/airex-api/app/api/: dependencies.py
services/airex-api/app/api/routes/: admin_auth.py  analytics.py  anomalies.py  audit_events.py  auth.py  chat.py  cloud_accounts.py  dlq.py  grafana_dashboards.py  health_checks.py  incidents.py  integrations.py  internal_tools.py  knowledge_base.py  metrics.py  notification_preferences.py  organizations.py  patterns.py  platform_admin.py  predictions.py  projects.py  reports.py  root_causes.py  runbook_executions.py  runbooks.py  settings.py  site24x7.py  sse.py  templates.py  tenant_members.py  tenants.py  users.py  webhooks.py
(+834 files in other folders)
